# NightWatch

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  render.yaml  requirements-web.txt  requirements.txt
nightwatch/: __init__.py  cli.py
nightwatch/core/: __init__.py  config.py  engine.py
nightwatch/db/: __init__.py  database.py  session.py
nightwatch/modules/: __init__.py  change_detector.py  ct_scanner.py  cve_correlator.py  dns_enum.py  http_probe.py  port_scanner.py  report_generator.py
nightwatch/utils/: __init__.py  logging_utils.py
nightwatch/web/: dashboard.py
nightwatch/web/templates/: dashboard.html
